all pages update

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About Us | Simply Revived</title>
+  <meta name="description" content="About Simply Revived — our history, mission and community programmes.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,35 +25,32 @@
 
 <section class="page-intro">
   <h2>About Simply Revived</h2>
-  <p>Simply Revived began as a small neighbourhood bookstore with a simple aim: to rekindle the love of reading and build a local place where people can connect over stories and coffee.</p>
+  <p>Simply Revived began as a small neighbourhood bookstore with the simple aim of rekindling the love of reading and creating a friendly meeting place for the local community.</p>
 </section>
 
-<section>
+<section style="max-width:1000px;margin:auto;padding:0 20px;">
   <h3>Our History</h3>
-  <p>Founded in 2015 by two book lovers, Simply Revived started on a modest street corner with second-hand books, a few armchairs and a kettle on. Over time the shop found its voice — hosting local author evenings, supporting reading circles for kids, and becoming a comfortable place where students and remote workers stop by for a quiet hour.</p>
+  <p>Founded in 2015 by two friends who loved books and conversation, Simply Revived began with a small curated selection and a kettle on the stove. Over the years we expanded into a welcoming space with a café corner, local author events, and community initiatives.</p>
 
   <h3>Mission</h3>
-  <p>To inspire a love of reading and nurture community by offering a carefully curated selection of books and a warm café space where conversations and ideas flourish.</p>
+  <p>To inspire a love for reading and community by offering a curated selection of books and a cosy space where stories, coffee and connection come together.</p>
 
   <h3>Vision</h3>
-  <p>To be the go-to neighbourhood bookstore and café that celebrates stories, supports local writers, and creates memorable moments for readers of all ages.</p>
+  <p>To be the go-to neighbourhood bookstore and café where people of all ages discover new ideas, enjoy meaningful conversations, and revive the simple joy of books and togetherness.</p>
 
   <h3>Values</h3>
   <ul>
-    <li><strong>Community:</strong> We host events and programs that bring people together.</li>
-    <li><strong>Accessibility:</strong> Books and events available to a wide and diverse audience.</li>
-    <li><strong>Sustainability:</strong> We favour used books, local suppliers and low-waste packaging.</li>
+    <li><strong>Community:</strong> We host events and programmes that bring neighbours together.</li>
+    <li><strong>Accessibility:</strong> We strive to make books and events welcoming to everyone.</li>
+    <li><strong>Sustainability:</strong> We support used books and local suppliers.</li>
     <li><strong>Curiosity:</strong> We champion new voices and diverse perspectives.</li>
   </ul>
 
-  <h3>What We Offer</h3>
-  <p>Alongside our bookshop you’ll find a cosy café corner serving freshly brewed coffee and baked goods — perfect for reading, meeting friends, or working quietly. We stock fiction, non-fiction, children’s books, local authors and a rotating selection of staff picks.</p>
-
   <h3>Community Programmes</h3>
-  <p>Simply Revived runs monthly reading circles, school outreach events, and author signings. We also have a small book-exchange shelf encouraging book-sharing among neighbours.</p>
+  <p>Monthly reading circles, book exchanges, author signings and school outreach. See our Events page for upcoming dates.</p>
 
   <h3>Visit Us</h3>
-  <p>We’re located at 123 Book Street, Cape Town. Drop in for a browse, a chat, or a slice of cake — we’d love to meet you.</p>
+  <p>123 Book Street, Cape Town. Drop in for a browse, a coffee and a friendly chat.</p>
 </section>
 
 <footer>
