--- a/events.html
+++ b/events.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Events | Simply Revived</title>
+  <meta name="description" content="Join author signings, reading circles and children's storytime at Simply Revived.">
   <link rel="stylesheet" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -23,12 +24,32 @@
   </nav>
 </header>
 
-<section>
+<section class="page-intro">
   <h2>Upcoming Events</h2>
-  <div class="books-grid">
-    <div class="card"><img src="images/event1.jpg" alt="Book Signing"><p>Author Book Signing - 25 Nov 2025</p></div>
-    <div class="card"><img src="images/event2.jpg" alt="Reading Circle"><p>Children's Reading Circle - 28 Nov 2025</p></div>
-  </div>
+  <p>We run author signings, monthly reading circles and children's story times. Join us!</p>
+</section>
+
+<section class="book-grid" style="max-width:1000px; margin:auto;">
+  <article class="book-card">
+    <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?w=900&q=80&auto=format&fit=crop" alt="Author signing">
+    <h3>Author Signing: Jane Doe</h3>
+    <p class="author">5 December 2025 — RSVP required</p>
+    <p class="description">Meet local author Jane Doe and hear about her new novel.</p>
+  </article>
+
+  <article class="book-card">
+    <img src="https://images.unsplash.com/photo-1554774853-d10d3d28e1a0?w=900&q=80&auto=format&fit=crop" alt="Reading circle">
+    <h3>Monthly Reading Circle</h3>
+    <p class="author">12 December 2025</p>
+    <p class="description">Book discussion and refreshments. All welcome.</p>
+  </article>
+
+  <article class="book-card">
+    <img src="https://images.unsplash.com/photo-1515169067860-53858c5a7b48?w=900&q=80&auto=format&fit=crop" alt="Children's storytime">
+    <h3>Children's Storytime</h3>
+    <p class="author">19 December 2025</p>
+    <p class="description">Interactive storytelling for ages 3–8.</p>
+  </article>
 </section>
 
 <footer>
