--- a/events.html
+++ b/events.html
@@ -31,21 +31,21 @@
 
 <section class="book-grid" style="max-width:1000px; margin:auto;">
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?w=900&q=80&auto=format&fit=crop" alt="Author signing">
+    <img src="https://images.unsplash.com/photo-1504198453319-5ce911bafcde?auto=format&fit=crop&w=900&q=80" alt="Author signing">
     <h3>Author Signing: Jane Doe</h3>
     <p class="author">5 December 2025 — RSVP required</p>
     <p class="description">Meet local author Jane Doe and hear about her new novel.</p>
   </article>
 
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1554774853-d10d3d28e1a0?w=900&q=80&auto=format&fit=crop" alt="Reading circle">
+    <img src="https://images.unsplash.com/photo-1554774853-d10d3d28e1a0?auto=format&fit=crop&w=900&q=80" alt="Reading circle">
     <h3>Monthly Reading Circle</h3>
     <p class="author">12 December 2025</p>
     <p class="description">Book discussion and refreshments. All welcome.</p>
   </article>
 
   <article class="book-card">
-    <img src="https://images.unsplash.com/photo-1515169067860-53858c5a7b48?w=900&q=80&auto=format&fit=crop" alt="Children's storytime">
+    <img src="https://images.unsplash.com/photo-1515169067860-53858c5a7b48?auto=format&fit=crop&w=900&q=80" alt="Children's storytime">
     <h3>Children's Storytime</h3>
     <p class="author">19 December 2025</p>
     <p class="description">Interactive storytelling for ages 3–8.</p>
