--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Books & Collections | Simply Revived</title>
-
-  <!-- CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Books | Simply Revived</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Lightbox CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -28,150 +26,98 @@
 </header>
 
 <section class="page-intro">
-  <h2>Books & Collections</h2>
-  <p>Search, filter and explore our curated selection — click any cover to zoom.</p>
+  <h2>Our Books</h2>
+  <p>Browse our carefully curated collection of novels, non-fiction, romance, mystery, sci-fi and children's books. Available in-store and online.</p>
 </section>
 
-<!-- Search + Filter -->
-<section class="filters">
-  <input id="searchInput" type="text" placeholder="Search books, authors, keywords…" />
+<section class="book-search">
+  <input type="text" id="searchInput" placeholder="Search books by title or author...">
   <select id="genreFilter">
     <option value="all">All Genres</option>
     <option value="fiction">Fiction</option>
-    <option value="nonfiction">Non-fiction</option>
+    <option value="non-fiction">Non-Fiction</option>
     <option value="romance">Romance</option>
-    <option value="mystery">Mystery / Thriller</option>
-    <option value="scifi">Sci-Fi / Fantasy</option>
-    <option value="selfhelp">Self-Help</option>
-    <option value="biography">Biography</option>
+    <option value="mystery">Mystery</option>
+    <option value="sci-fi">Sci-Fi</option>
     <option value="children">Children</option>
-    <option value="local">Local Authors</option>
   </select>
 </section>
 
-<!-- Books grid -->
-<section class="book-grid" id="bookGrid">
+<section class="book-grid">
+  <div class="book-card" data-genre="fiction">
+    <a href="https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Fiction Book">
+      <img src="https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=400&q=80" alt="Fiction book">
+    </a>
+    <h3>Fiction</h3>
+    <p>Explore imaginative stories from contemporary authors.</p>
+  </div>
 
-  <!-- Card 1 -->
-  <article class="book-card" data-genre="fiction">
-    <button class="img-btn" aria-label="Open image">
-      <img class="gallery-item" src="https://images.unsplash.com/photo-1512820790803-83ca734da794?w=800&q=80&auto=format&fit=crop" alt="Stack of books on a table">
-    </button>
-    <h3>The Silent Pages</h3>
-    <p class="author">Sarah Thompson</p>
-    <p class="description">A modern literary novel about memory, place and small-town mysteries.</p>
-  </article>
+  <div class="book-card" data-genre="romance">
+    <a href="https://images.unsplash.com/photo-1526318472351-bc6f4c9f1fb0?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Romance Book">
+      <img src="https://images.unsplash.com/photo-1526318472351-bc6f4c9f1fb0?auto=format&fit=crop&w=400&q=80" alt="Romance book">
+    </a>
+    <h3>Romance</h3>
+    <p>A collection of love stories to warm your heart.</p>
+  </div>
 
-  <!-- Card 2 (Romance) -->
-  <article class="book-card" data-genre="romance">
-    <button class="img-btn" aria-label="Open image">
-      <img class="gallery-item" src="https://images.unsplash.com/photo-1526318472351-bc6f4c9f1fb0?w=800&q=80&auto=format&fit=crop" alt="Romance book cover">
-    </button>
-    <h3>Hearts in Bloom</h3>
-    <p class="author">L. Rivers</p>
-    <p class="description">A tender romance set in the slow, sunlit streets of a coastal town.</p>
-  </article>
+  <div class="book-card" data-genre="mystery">
+    <a href="https://images.unsplash.com/photo-1532012197267-da84d127e765?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Mystery Book">
+      <img src="https://images.unsplash.com/photo-1532012197267-da84d127e765?auto=format&fit=crop&w=400&q=80" alt="Mystery book">
+    </a>
+    <h3>Mystery</h3>
+    <p>Twists and turns that will keep you guessing until the last page.</p>
+  </div>
 
-  <!-- Card 3 (Mystery) -->
-  <article class="book-card" data-genre="mystery">
-    <button class="img-btn" aria-label="Open image">
-      <img class="gallery-item" src="https://images.unsplash.com/photo-1532012197267-da84d127e765?w=800&q=80&auto=format&fit=crop" alt="Mystery novel cover">
-    </button>
-    <h3>Shadows of the Night</h3>
-    <p class="author">M. Khumalo</p>
-    <p class="description">A page-turning thriller where secrets from the past resurface.</p>
-  </article>
+  <div class="book-card" data-genre="sci-fi">
+    <a href="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Sci-Fi Book">
+      <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=400&q=80" alt="Sci-Fi book">
+    </a>
+    <h3>Sci-Fi</h3>
+    <p>Futuristic adventures and imaginative worlds to explore.</p>
+  </div>
 
-  <!-- Card 4 (Sci-Fi) -->
-  <article class="book-card" data-genre="scifi">
-    <button class="img-btn" aria-label="Open image">
-      <img class="gallery-item" src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?w=800&q=80&auto=format&fit=crop" alt="Sci-fi book cover">
-    </button>
-    <h3>Galactic Drift</h3>
-    <p class="author">A. Patel</p>
-    <p class="description">An interstellar adventure about crew, courage and the unknown.</p>
-  </article>
+  <div class="book-card" data-genre="non-fiction">
+    <a href="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Non-Fiction Book">
+      <img src="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?auto=format&fit=crop&w=400&q=80" alt="Non-fiction book">
+    </a>
+    <h3>Non-Fiction</h3>
+    <p>Informative and educational reads for curious minds.</p>
+  </div>
 
-  <!-- Card 5 (Non-fiction) -->
-  <article class="book-card" data-genre="nonfiction">
-    <button class="img-btn" aria-label="Open image">
-      <img class="gallery-item" src="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?w=800&q=80&auto=format&fit=crop" alt="Non-fiction book">
-    </button>
-    <h3>The Real Story</h3>
-    <p class="author">K. Ndlovu</p>
-    <p class="description">Investigative non-fiction exploring social change and resilience.</p>
-  </article>
-
-  <!-- add more cards as needed -->
+  <div class="book-card" data-genre="children">
+    <a href="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Children's Book">
+      <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&w=400&q=80" alt="Children's book">
+    </a>
+    <h3>Children</h3>
+    <p>Fun and educational stories for young readers.</p>
+  </div>
 </section>
-
-<!-- Lightbox overlay -->
-<div id="lightboxOverlay" aria-hidden="true">
-  <button id="lightboxClose" aria-label="Close (Esc)">&times;</button>
-  <button id="lightboxPrev" class="nav" aria-label="Previous (Left)">&larr;</button>
-  <img id="lightboxImg" alt="Expanded cover">
-  <button id="lightboxNext" class="nav" aria-label="Next (Right)">&rarr;</button>
-</div>
 
 <footer>
   <p>&copy; 2025 Simply Revived. All Rights Reserved.</p>
 </footer>
 
-<!-- Search & filter behaviour -->
+<!-- Lightbox JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
 <script>
-$(function(){
-  function updateFilter(){
-    let q = $('#searchInput').val().toLowerCase();
-    let genre = $('#genreFilter').val();
+// Search and Filter Functionality
+$(document).ready(function(){
+  $('#searchInput, #genreFilter').on('input change', function(){
+    var searchText = $('#searchInput').val().toLowerCase();
+    var genre = $('#genreFilter').val();
+
     $('.book-card').each(function(){
-      const title = $(this).find('h3').text().toLowerCase();
-      const author = $(this).find('.author').text().toLowerCase();
-      const desc = $(this).find('.description').text().toLowerCase();
-      const genres = $(this).attr('data-genre') || '';
-      const matchesText = (title + ' ' + author + ' ' + desc).indexOf(q) !== -1;
-      const matchesGenre = (genre === 'all') || genres.split(' ').includes(genre);
-      $(this).toggle(matchesText && matchesGenre);
+      var title = $(this).find('h3').text().toLowerCase();
+      var cardGenre = $(this).data('genre');
+
+      if((title.includes(searchText) || searchText === '') &&
+         (genre === 'all' || genre === cardGenre)){
+        $(this).show();
+      } else {
+        $(this).hide();
+      }
     });
-  }
-
-  $('#searchInput').on('input', updateFilter);
-  $('#genreFilter').on('change', updateFilter);
-
-  // Accessibility: allow Enter on image buttons to open
-  $('.img-btn').on('click keypress', function(e){
-    if(e.type === 'click' || e.key === 'Enter') {
-      const index = $('.gallery-item').index($(this).find('.gallery-item'));
-      openLightbox(index);
-    }
-  });
-
-  // Lightbox logic
-  const items = $('.gallery-item');
-  let current = 0;
-  function openLightbox(i){
-    current = i;
-    $('#lightboxImg').attr('src', items.eq(current).attr('src'));
-    $('#lightboxOverlay').fadeIn(200).attr('aria-hidden','false');
-    $('body').css('overflow','hidden');
-  }
-  function closeLightbox(){
-    $('#lightboxOverlay').fadeOut(200).attr('aria-hidden','true');
-    $('body').css('overflow','auto');
-  }
-  function prevImg(){ current = (current - 1 + items.length) % items.length; $('#lightboxImg').attr('src', items.eq(current).attr('src')); }
-  function nextImg(){ current = (current + 1) % items.length; $('#lightboxImg').attr('src', items.eq(current).attr('src')); }
-
-  $('#lightboxClose').on('click', closeLightbox);
-  $('#lightboxPrev').on('click', prevImg);
-  $('#lightboxNext').on('click', nextImg);
-
-  // keyboard
-  $(document).on('keydown', function(e){
-    if($('#lightboxOverlay').is(':visible')) {
-      if(e.key === 'Escape') closeLightbox();
-      if(e.key === 'ArrowLeft') prevImg();
-      if(e.key === 'ArrowRight') nextImg();
-    }
   });
 });
 </script>
