--- a/booksandcollections.html
+++ b/booksandcollections.html
@@ -75,8 +75,8 @@
   </div>
 
   <div class="book-card" data-genre="children">
-    <a href="https://images.unsplash.com/photos/a-stack-of-books--LQfvd83i4I?auto=format&fit=crop&w=800&q=80" data-lightbox="books" data-title="Children's Book Stack">
-      <img src="https://images.unsplash.com/photos/a-stack-of-books--LQfvd83i4I?auto=format&fit=crop&w=400&q=80" alt="Stack of colourful children's books">
+    <a href="img/Romance.jpg" data-lightbox="books" data-title="Children's Book Stack">
+      <img src="img/Romance.jpg" alt="Stack of colourful children's books">
     </a>
     <h3>Children</h3>
     <p>Fun, imaginative stories for young readers.</p>
